# SVM-Hank

./: .gitignore  LICENSE  README  SVM.hs  Scaling.hs  compile.sh  hank.cabal  hank.hs
report/: report.tex
