Name:		     Hank
Version:             0.0.1
Description:         SVM tester program
License:             AllRightsReserved
License-file:        LICENCE
Category:            AI, Graphics, Machine Vision
Synopsis:            Test
Description:            Test project.

Author:              Heikki Salo
Maintainer:          heikki.ao.salo@iki.fi
Build-Type:          Simple
Cabal-Version:       >=1.6

Executable           hank
    main-is:         hank.hs
    extra-libraries:
        opencv_calib3d,
        opencv_contrib,
        opencv_core,
        opencv_features2d,
        opencv_highgui,
        opencv_imgproc,
        opencv_legacy,
        opencv_ml,
        opencv_objdetect,
        opencv_video
    Build-Depends:
        array >= 0.3.0.2,
        carray >= 0.1.5,
        haskell98,
        base >= 3 && < 5,
        svm-simple >= 0.2.0,
        CV >= 0.3,
        split >= 0.1.3,
        vector >= 0.7.0.1,
        filepath >= 1.2.0.0
    ghc-options:
        -with-rtsopts=-N
        -with-rtsopts=-g
