Name:		    Hank
Version:        0.5
Description:    SVM tester program
License:        MIT
License-file:   LICENSE
Category:       AI, Graphics, Machine Vision
Synopsis:       Test
Description:    A study on using Haralick texture features and SVM to
    classify images.
Author:         Heikki Salo
Maintainer:     heikki.ao.salo@iki.fi
Build-Type:     Simple
Cabal-Version:  >=1.6

Executable      hank
    main-is:    hank.hs
    extra-libraries:
        opencv_calib3d,
        opencv_contrib,
        opencv_core,
        opencv_features2d,
        opencv_highgui,
        opencv_imgproc,
        opencv_legacy,
        opencv_ml,
        opencv_objdetect,
        opencv_video
    Build-Depends:
        array >= 0.3.0.2,
        carray >= 0.1.5,
        haskell98,
        base >= 3 && < 5,
        svm-simple >= 0.2.0,
        CV >= 0.3,
        split >= 0.1.3,
        vector >= 0.7.0.1,
        filepath >= 1.2.0.0
